2017-12-10  Sam Steingold  <sds@gnu.org>

	* loop.lisp (expand-loop): Revert the 2017-11-22 fix for bug#375.

2017-12-08  Sam Steingold  <sds@gnu.org>

	Ensure that all positional args are in *ARGS* when compiling.
	* spvw.d (push_to_args): Extract from ...
	(main_actions): Call push_to_args() on argv_execute_args when
	compiling in addition to when scripting
	* makemake.in (check-script): Test that.

2017-12-07  Jerry James  <loganjerry@gmail.com>
	    Sam Steingold  <sds@gnu.org>

	Avoid -Wunsequenced / -Wsequence-point warnings (subsumes patch#54).
	* modules/clx/new-clx/clx.f (STANDARD_XID_OBJECT_LOOK)
	(STANDARD_PTR_OBJECT_LOOK): Avoid multiple popSTACK()s in a single
	expression by creating a separate statement for each.
	* modules/rawsock/rawsock.c (RAWSOCK:GETADDRINFO): Likewise.
	* modules/syscalls/calls.c (POSIX:MKNOD): Likewise.

2017-12-06  Sam Steingold  <sds@gnu.org>

	* emacs/d-mode.el (d-extra-keywords): Add "unused".
	* array.d, encoding.d, foreign.d, funarg.d, io.d, pathname.d,
	* sequence.d, socket.d, spvw.d, spvw_garcol.d, spvw_garcol_old.d,
	* spvw_mmap.d, spvw_sigint.d, spvw_sigpipe.d, spvw_sigsegv.d,
	* spvw_sigwinch.d, stream.d, time.d, gctrigger.c: Code cleanup:
	use "unused(V)" instead of "(void)V".

2017-12-06  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (handle_fault_range) [!(GENERATIONAL_GC & SPVW_MIXED)]:
	Expand non-trivially to avoid -Wunused-parameter.

2017-12-06  Sam Steingold  <sds@gnu.org>

	* makemake.in (LIBS): Add LIBUNISTRING like LIBSIGSEGV. Fix bug#719.

2017-12-06  Sam Steingold  <sds@gnu.org>

	Make sure the Darwin foo.dSYM directories are removed by clean et al.
	* makemake.in (exefiles, EXERM): New variables.
	Used throughout to ensure removal of .dSYM. Cf. patch#50.

2017-12-05  Jörg Höhle  <hoehle@users.sourceforge.net>

	* loop.lisp (destructure-type): In LOOP destructuring, type NIL
	originally meant: "Skip type declaration for this variable" (patch#53).

2017-12-05  Sam Steingold  <sds@gnu.org>
