@@ -1,3 +1,7 @@
+2017-12-11  Sam Steingold  <sds@gnu.org>
+
+	* modules/regexp/regexp.lisp (regexp-split): Respect the :END argument.
+
 2017-12-10  Sam Steingold  <sds@gnu.org>
 
 	* loop.lisp (expand-loop): Revert the 2017-11-22 fix for bug#375.
